rename to GCalendar cause of google policies

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
    "icons": {
       "128": "icon-128.gif"
    },
-   "name": "Google Calendar Checker w/ Popup",
+   "name": "GCalendar Checker w/ Popup",
    "permissions": [ "tabs", "bookmarks", "http://*.google.com/", "https://*.google.com/" ],
    "update_url": "http://clients2.google.com/service/update2/crx",
    "version": "0.3.2"
